# itrader_backend

./: .env.example  .env.test  .env.trader  .gitignore  3697503  ACCOUNT_MANAGEMENT.md  ACCOUNT_SETUP.md  ADMIN_TOKEN_ERROR_FIXED.md  AGENTS.md  AUTOMATED_WORKFLOW_COMPLETE.md  AUTO_TRADER_CHANGES.md  AUTO_TRADER_WORKFLOW_README.md  BUILDING.md  BYBIT_P2P_API.md  BYBIT_P2P_API_RESEARCH.md  BYBIT_P2P_API_STATUS.md  BYBIT_P2P_PROBLEM_SOLVED.md  BYBIT_PYTHON_BRIDGE.md  BYBIT_PYTHON_BRIDGE_ARCHITECTURE.md  BYBIT_RATE_IMPLEMENTATION.md  BYBIT_TEST_STATUS.md  CI_CD.md  Cargo.toml  DEMO_QUICKSTART.md  DEMO_README.md  Dockerfile  ENCRYPTION_REMOVED.md  FULL_SYSTEM_OVERVIEW.md  GATE_API_INTEGRATION.md  GATE_API_STATUS.md  GMAIL_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  LAUNCHER_GUIDE.md  MANUAL_MODE_EXAMPLES.md  MIGRATION_COMPLETE.md  MULTI_ACCOUNT_TRADER_README.md  P2P_ORDER_MANAGEMENT.md  (+129 more)
.claude/: settings.local.json
.sqlx/: query-02bc151a90570789161b9b0e3c92d5ce6fe20b9fd6f5025492d9f91292166466.json  query-0683b66f3efc96817e75188c79269853a8f2f9cbbdd69214001e0698bd36420d.json  query-075330249fd7113148a05dfaed0a40082aa7f01f28aab3081cd5a8c4a947b848.json  query-07fcef3ed73fd56707a199510598088b56bc0185bbcd6875c258b53cc216f3bf.json  query-0e08d17630d1b664223725e96343dc0790d614116cee4edcb84c1255098c24cc.json  query-0f01f3577a79bade7e5ee82de04900deb8537910360775ced3323eeff8d91854.json  query-18d025cfbeb42a892ce17cf394a2eb82ba260a1ce8f25e27842afd4655e0a14e.json  query-1bc98644518c760f3bab747c907da487d223a48169a937650f1eb49b5cbd2f56.json  query-25bf19e0bd4dc723712ae5444b2e851430813df3d572c89661c1705802a1f7cd.json  query-2a342f0f3068e83a3c02694d38479e9a63315951028b2b39713b0bfaa2da9439.json  query-44a7bb5da6000d702df3c8c0abb49ee0e375597d62c805d5fb835bd88d5d313b.json  query-468c5d94f4d6876acbb3eb15d20d53b2bd360070dbf4910ddf9db01529a2e1c7.json  query-482ee380d4297ab527ce6a6a92186e8bb108ce62ce9270e621a4702fd755937c.json  query-4ce6c31c4187b644d4566406311f61712cfcc6a0ab2c3219ca825452e56cf4a8.json  query-546180a2df3deec4200156a6c2504dc3688697d37ac9f10ba6a4a020cbcc0f35.json  query-6863749ca4780ec53c0a3a985e38657ef25d122315409ef6873d401b5362142d.json  query-75b75adfeb3cd3589e8181fb2b41a1303046b00bd31228f8ba2756c878371e76.json  query-7840726d3c6cca1537ab1629af2edec8fb2c20b37b42ccdd33f9c9445000d3ff.json  query-7ea635ad8590d8d2229e4adfa2938b9f68eb4e8444d6ddf10479f67468472ac8.json  query-807adabab1d803a3f59738fe97b8f1005a149d3d2772e70226a317cfd76be322.json  query-842362348c5ac6584ccee0ca36347025bdb002f9674ef8d607f7185202ded491.json  query-85c733b81a4d27477a722d980c1ede367240ef16f017b8a3fd53c60b3a815109.json  query-85e2223e40194155003917ac2997d5cc381cb9586544d42dcc309a393763929e.json  query-9a65a8417cb96ffb1cac01f6bcaa3e75ccfc54a13a5b89a36c39b2d14b9f163e.json  query-9b9c7f26eff1dbb7f5822c546dd0c52a4b37360510f56a717297d9ccfd2db809.json  query-9c34838d511c7b9cf234fce0c5b0710ab37b0c6fd7603ea6ef68a4674411859f.json  query-a0b352510c2a09f7a314ddea6f85f12eff843e4c716f414ea14a8b459b506d7c.json  query-a139eb4c41e2c4e4cbc901c4c39d126906c21e9e442dc5bc691f3bd2a8eab1a3.json  query-a92b1448bb73bbe8d16121a0580c678bc5a4781b0766b2f5120d2161f744e86a.json  query-b4180cc3af525b9821933bffa8ac909dfe06a49a888b26f6fc8682765838e4f3.json  query-b70928994352e442cdedd1d1823d341d0041b6166490bfad93f50d2573db2840.json  query-c68160a892ee088e8befdea39bee492299c38081e724a9f75c0c5619f6a91ed3.json  query-cb8f95c7dafd28cf61c4027a4ea6016d451b62ad209353f8b3adee3e83593df2.json  query-d3455c18b62660a11e526cbe7424ac7c82b60756277355623d645dfd4405b667.json  query-d59b035d991f103f4495c7c573da7977a6709be2f1871dde6c0858b4183c6f08.json  (+6 more)
config/: default.toml  production.toml  (+1 more)
(+136 files in other folders)
