[project]
name = "itrader-backend"
version = "0.1.0"
description = "ITrader Backend Python Components"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.1",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "pybit>=5.11.0",
    "PyPDF2>=3.0.0",
    "pycryptodome>=3.23.0",
    "aiosqlite>=0.19.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
python-preference = "only-managed"